--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,22 @@
+h1{
+  border-style: groove;
+  align-items: center;
+  font-weight: bold;
+  font-family: monospace;
+}
+
+h2{
+  font-style: oblique;
+}
+
+div {
+  background-color: silver;
+  font-size: 15px;
+  border-style:ridge;
+  padding: 3px;
+  margin: 2px;
+}
+
 .csharp {
   display:none;
 }
