--- a/css/styles.css
+++ b/css/styles.css
@@ -3,18 +3,21 @@ h1{
   align-items: center;
   font-weight: bold;
   font-family: monospace;
+  text-shadow: 10px;
 }
 
 h2{
   font-style: oblique;
+  text-shadow: 3px;
 }
 
 div {
   background-color: silver;
   font-size: 15px;
   border-style:ridge;
-  padding: 3px;
-  margin: 2px;
+  border: 10px outset: black;
+  padding: 4px;
+  margin: 1px;
 }
 
 .csharp {
